# ros2-warehouse-fleet-simulator

./: README.md
install/: local_setup.sh  (+1 more)
install/warehouse_interfaces/share/warehouse_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_interfaces/share/warehouse_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_warehouse_interfaces__rosidl_generator_cExport-noconfig.cmake  export_warehouse_interfaces__rosidl_generator_cExport.cmake  export_warehouse_interfaces__rosidl_generator_cppExport.cmake  export_warehouse_interfaces__rosidl_generator_pyExport.cmake  export_warehouse_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  warehouse_interfaces__rosidl_typesupport_cExport-noconfig.cmake  warehouse_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  warehouse_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/warehouse_interfaces/share/warehouse_interfaces/hook/: catkin_pythonpath.ps1
install/warehouse_interfaces/share/warehouse_interfaces/rust/: Cargo.toml
install/warehouse_interfaces/share/warehouse_interfaces/rust/src/: srv.rs
install/warehouse_interfaces/share/warehouse_interfaces/rust/src/srv/: rmw.rs
install/warehouse_interfaces/share/warehouse_interfaces/srv/: AssignTask.idl  AssignTask_Response.msg
src/warehouse_simulator/: package.xml  setup.cfg  setup.py
src/warehouse_simulator/warehouse_simulator/: fleet_manager.py
(+31 files in other folders)
