<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_simulator</name>
  <version>0.0.0</version>
  <description>Warehouse simulator using ROS2</description>
  <maintainer email="mrinal@todo.todo">mrinal</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>warehouse_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
