<?xml version="1.0"?>
<package format="3">
  <name>warehouse_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces for warehouse simulator</description>
  <maintainer email="mrinal@todo.todo">mrinal</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
